fix spacing of sections on index

--- a/customize.dist/src/less2/include/infopages.less
+++ b/customize.dist/src/less2/include/infopages.less
@@ -49,7 +49,7 @@ body {
         }
         h2 {
             font-size: 1.8em;
-            margin-top: 0px;
+            margin-top: 20px;
             margin-bottom: 0.5em;
         }
         h3 {
